--- a/HW-2.html
+++ b/HW-2.html
@@ -421,7 +421,7 @@ species.</em></p>
 <h1><span class="header-section-number">4</span> </h1>
 <p>Build a github repository to store your homework assignments. Share
 the link in this file.</p>
-<p><em>STUDENT INPUT</em></p>
+<p><em><a href="https://github.com/Swagat321/hw2" class="uri">https://github.com/Swagat321/hw2</a></em></p>
 </div>
 
 
